--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+}
+@font-face {
+    font-family: SpaceGrotesk;
+    src: url(SpaceGrotesk-VariableFont_wght.ttf);
+  }
+
+p {
+  font-size: 100px;
+  font-family: SpaceGrotesk;
+  font-weight: 600;
+  color: white;
+  background-color: black;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
