--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,6 @@ p {
   font-family: SpaceGrotesk;
   font-weight: 600;
   color: white;
-  background-color: black;
 }
  
 h2 {
@@ -40,4 +39,7 @@ th, tr {
 
 .change-positive {
   color: rgb(85, 243, 85);
+}
+@media screen and (max-width:768px) {
+
 }
