--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   }
 
 p {
-  margin-left: 129px;
+  margin-left: 185px;
   padding-top: 100px;
   font-size: 60px;
   font-family: SpaceGrotesk;
@@ -16,30 +16,71 @@ p {
   color: white;
 }
  
+p {
+  animation: slideUp 1s ease-in-out;
+  animation-fill-mode: both;
+}
+
+@keyframes slideUp {
+  from {
+    transform: translateY(100px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+
 h2 {
   font-family: SpaceGrotesk;
   font-size: 20px;
   color: white;
 }
 
-thead {
+h3 {
+  font-family: SpaceGrotesk;
+  font-size: 10px;
+  color: white;
+}
+
+input {
+  width: 500px;
+  height: 200px;
+  font-size: 80px;
+  caret-color: aquamarine;
+  background-color: black;
+  color: aquamarine;
+  border-radius: none;
+  border-color: aquamarine;
+  border: 0.5px;
+  box-shadow: none;
+}
+
+
+table {
   padding-top: 50px;
 }
 
-th, tr {
+
+tr {
   color: white;
   font-family: SpaceGrotesk;
-  font-size: 30px;
-  line-height: 1.5;
-}
+  font-size: 20px;
 
+}
 .change-negative {
-  color: rgb(236, 17, 35);
+  color: rgb(158, 72, 244);
 }
 
 .change-positive {
-  color: rgb(85, 243, 85);
+  color: aquamarine;
 }
 @media screen and (max-width:768px) {
 
+}
+
+.star {
+  padding-right: 30px;
 }
