--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ button.register-btn {
 font-family: SpaceGrotesk;
 font-size: 35px;
 font-weight: 600;
-background-color: aquamarine;
+background-color: #8ddece;
 margin-top: 50px;
 padding-left: 20px;
 padding-right: 20px;
@@ -123,14 +123,13 @@ tr {
   color: black;
   font-family: SpaceGrotesk;
   font-size: 20px;
-
 }
 .change-negative {
   color: rgb(158, 72, 244);
 }
 
 .change-positive {
-  color: aquamarine;
+  color: #77d6c3;;
 }
 
 .star {
@@ -157,7 +156,7 @@ tr {
 
 .nav-menu a:active,
 .nav-menu a:hover {
-color: aquamarine;
+color: blue;
 }
 
 .nav-menu li {
@@ -180,9 +179,24 @@ color: aquamarine;
   padding: 2px 15px;
 }
 
+.btn-3 {
+  display: flex;
+  align-items: center;
+  font-family: SpaceGrotesk;
+  color: white;
+  background-color: blue;
+  border-radius: 0;
+  border-color: blue;
+  border-width: 0.5px;
+  font-size: 18px;
+  padding: 2px 15px;
+}
+
+
+
 .loginbutton:hover,
 .btn-2:hover {
-  background-color: blue;
+  background-color: #8ddece;
 }
 
 a:link,
@@ -192,11 +206,11 @@ a:visited {
 }
 
 a:hover {
-  color: aquamarine;
+  color: #8ddece;
 }
 
 a:active {
-  color: aquamarine;
+  color: #8ddece;;
 }
 
 .btn:focus {
